Use ZGC on desktop